--- a/Mandatum/Application/Application.csproj
+++ b/Mandatum/Application/Application.csproj
@@ -9,4 +9,8 @@
       <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="NReco.Csv" Version="1.0.0" />
+    </ItemGroup>
+
 </Project>
