--- a/Mandatum/UI/appsettings.json
+++ b/Mandatum/UI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=mandatumserver.database.windows.net;Initial Catalog=MandatumTest;Persist Security Info= True; User Id=Matvey;Password=Mandatum2038"
+    "DefaultConnection": "Data Source=mandatumserver.database.windows.net;Initial Catalog=MandatumDB;Persist Security Info= True; User Id=Matvey;Password=Mandatum2038"
   },
   "Logging": {
     "LogLevel": {
