--- a/Mandatum/Application/Application.csproj
+++ b/Mandatum/Application/Application.csproj
@@ -9,4 +9,8 @@
       <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
+    </ItemGroup>
+
 </Project>
