--- a/Mandatum/UI/UI.csproj
+++ b/Mandatum/UI/UI.csproj
@@ -25,4 +25,10 @@
       <ProjectReference Include="..\Application\Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Update="Views\Tasks\NewTasks.razor">
+        <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      </Content>
+    </ItemGroup>
+
 </Project>
