--- a/Mandatum/Application/Application.csproj
+++ b/Mandatum/Application/Application.csproj
@@ -10,7 +10,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNet.Identity.Owin" Version="2.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
+      <PackageReference Include="Microsoft.Owin.Host.SystemWeb" Version="2.1.0" />
     </ItemGroup>
 
 </Project>
