--- a/Mandatum/Domain/Domain.csproj
+++ b/Mandatum/Domain/Domain.csproj
@@ -4,4 +4,9 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNet.Identity.Owin" Version="2.0.0" />
+      <PackageReference Include="Microsoft.Owin.Host.SystemWeb" Version="2.1.0" />
+    </ItemGroup>
+
 </Project>
