--- a/Mandatum/Infrastructure/Infrastructure.csproj
+++ b/Mandatum/Infrastructure/Infrastructure.csproj
@@ -5,8 +5,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNet.Identity.Owin" Version="2.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Owin.Host.SystemWeb" Version="2.1.0" />
     </ItemGroup>
 
 </Project>
