--- a/Mandatum/UI/UI.csproj
+++ b/Mandatum/UI/UI.csproj
@@ -6,11 +6,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Folder Include="Migrations" />
       <Folder Include="Views\Task" />
       <Folder Include="wwwroot\images" />
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNet.Identity.Owin" Version="2.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.0">
         <PrivateAssets>all</PrivateAssets>
@@ -18,6 +20,7 @@
       </PackageReference>
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Owin.Host.SystemWeb" Version="2.1.0" />
       <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.0" />
     </ItemGroup>
 
