--- a/Mandatum/UI/UI.csproj
+++ b/Mandatum/UI/UI.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AspNet.Security.OAuth.GitHub" Version="5.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="3.1.6" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.0">
